--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -5,7 +5,7 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-/* your custom css */
+/* Typography */
 
 body {
   font-family: $fontBody;
@@ -17,6 +17,9 @@ h3,
 h4 {
   font-family: $fontHeader;
 }
+
+
+/* Header */
 
 .fixedHeaderContainer {
   background: #FFF;
@@ -34,6 +37,17 @@ h4 {
   text-transform: uppercase;
   letter-spacing: 1px;
 }
+
+/* Content Helpers */
+
+.button-group {
+  display: flex;
+}
+
+.button-group .button {
+  margin: 0 0 1em 1em;
+}
+
 
 @media only screen and (min-device-width: 360px) and (max-device-width: 736px) {}
 
